--- a/styles.css
+++ b/styles.css
@@ -493,7 +493,8 @@ main {
         justify-content: center;
         font-weight: bolder;
         font-size: 1rem;
-        margin-left: 1rem;
+        margin-left: 0rem;
+        margin-top: 1rem;
     }
     
     
